<resources>
    <string name="app_name">CampusInteligenteIOT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_error_email">Debe introducir un email</string>
    <string name="login_error_passwd">Debe introducir una contraseña</string>
    <string name="login_success">Ha iniciado sesión satisfactoriamente</string>
    <string name="login_email">Debe verificar el email</string>
    <string name="login_error">Error en el inicio de sesión</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="google_token">378264786934-iqmrnrmh8eviu0dah9aolgcn4dm3b24a.apps.googleusercontent.com</string>
    <string name="google_login_error">Ha ocurrido un error</string>
    <string name="email_verified">Email verificado con éxito</string>
    <string name="register_empty_name">Debes introducir un nombre</string>
    <string name="register_empty_surname">Debes introducir unos apellidos</string>
    <string name="register_empty_username">Debes introducir un nombre de usuario</string>
    <string name="register_success">Perfecto</string>
    <string name="signup_error_email">Debes introducir un email válido</string>
    <string name="signup_error_password">Debes introducir una contraseña válida</string>
    <string name="signup_error_notequal_password">Las contraseñas no coinciden</string>
    <string name="signup_error">Ha ocurrido un error inesperado. Inténtelo de nuevo</string>
    <string name="register_college_degree_error">Debes seleccionar una carrera</string>
    <string name="register_birthdate_error">Debes seleccionar una fecha</string>
    <string name="register_image_error">Error al subir la imagen</string>
    <string name="register_image_success">Se ha subido la imagen con éxito</string>
    <string name="firestore_upload_error">Se ha producido un error al subir los datos. Inténtelo de nuevo</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start_navigation">COMENZAR RUTA</string>
    <string name="access_token">sk.eyJ1IjoiYW5kcm9pZHNoYWtpbCIsImEiOiJja2k0bDMzcjcwMGZ5MnBuMml5ZGtyeDd6In0.cxt1NubVuc6yVE5CdS6iUQ</string>
    <string name="map_style">mapbox://styles/cristiangonz/ckx3ys9vz5lv715s9h86rfumh</string>
    <string name="user_location_permission_explanation">Necesitamos que aceptes los permisos de localizacion para funcionar correctamente.</string>
    <string name="user_location_permission_not_granted">No has aceptado los permisos de localizacion.</string>
    <string-array name="collegeDegrees">
        <item>Administración y Dirección de Empresas</item>
        <item>Biología</item>
        <item>Bioquímica</item>
        <item>Ciencias Ambientales</item>
        <item>Ciencia y Tecnología de los Alimentos</item>
        <item>Cine y Cultura</item>
        <item>Derecho</item>
        <item>Educación Infantil</item>
        <item>Educación Infantil (Itinerario Bilingüe)</item>
        <item>Educación Primaria</item>
        <item>Educación Primaria (Itinerario Bilingüe)</item>
        <item>Educación Social</item>
        <item>Enfermería</item>
        <item>Estudios Ingleses</item>
        <item>Filología Hispánica</item>
        <item>Física</item>
        <item>Fisioterapia</item>
        <item>Gestión Cultural</item>
        <item>Historia</item>
        <item>Historia del Arte</item>
        <item>Psicología</item>
        <item>Ingeniería Civil</item>
        <item>Ingeniería Eléctrica</item>
        <item>Ingeniería Electrónica Industrial</item>
        <item>Ingeniería Forestal</item>
        <item>Ingeniería Informática</item>
        <item>Ingeniería Mecánica</item>
        <item>Veterinaria</item>
        <item>Medicina</item>
        <item>Química</item>
        <item>Relaciones Laborales y Recursos Humanos</item>
        <item>Traducción e Interpretación</item>
        <item>Turismo</item>
        <item>Ingeniería de Recursos Energéticos y Mineros</item>
        <item>Ingeniería Agroalimentaria y del Medio Rural</item>
    </string-array>
    <string name="title_activity_auxiliary">AuxiliaryActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="messages_header">Mensajes</string>
    <string name="sync_header">Sincronización</string>
    <string name="signature_title">Tu firma</string>
    <string name="reply_title">Acción de respuesta predeterminada</string>
    <string name="sync_title">Sincronizar email periódicamente</string>
    <string name="attachment_title">Descargar archivos adjuntos</string>
    <string name="attachment_summary_on">Descargar archivos adjuntos automáticamente
    </string>
    <string name="attachment_summary_off">Solo descargar archivos adjuntos cuando se especifique</string>
    <string name="api_key">2tnurnb52yub</string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="show_nearby_lines">Ver líneas y paradas cercanas</string>
    <string name="get_directions_cor_rab">Quiero ir hasta el campus de Rabanales</string>
    <string name="get_directions_rab_cor">Quiero ir hasta Córdoba</string>
    <string name="departures">Salidas</string>
    <string name="arrivals">Llegadas</string>
    <string name="register_images_error">Error al subir la imagen de perfil</string>
    <string name="register_images_success">Se ha subido la imagen correctamente</string>
    <string name="firestore_upload_success">Se ha subido la imagen satisfactoriamente</string>
    <string name="firestore_upload_failure">No se ha podido subir la imagen</string>
    <string name="quieres_publicar_el_producto">¿Quieres publicar el producto?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="pregunta_dejar_de_publicar">¿Quieres que el producto deje de estar publicado?</string>
    <string name="delete_question_2">¿Quieres archivar el producto o borrarlo definitivamente?</string>
    <string name="archive_text">Archivar</string>
    <string name="delete_text">Borrar</string>
    <string name="delete_success">Producto eliminado con éxito</string>
    <string name="productos">Productos</string>
    <string name="productos_text">Productos</string>
    <string name="fav_products_list">Lista productos favoritos</string>
    <string-array name="categories">
        <item>Ninguna</item>
        <item>Libros</item>
        <item>Electrónicos</item>
        <item>Otros</item>
        <item>Sin filtro</item>
    </string-array>
    <string name="without_filter">Sin filtro</string>
    <string name="my_products">Mis productos</string>
    <string name="filter">Filtrar</string>
    <string name="filter_products">Filtrar productos</string>
    <string name="my_favs">Mis favoritos</string>
    <string name="my_fav_prods">Mis productos favoritos</string>
    <string name="display_menu">Desplegar menú de opciones</string>
    <string name="this_week_events">Eventos de esta semana</string>
    <string name="entry_event">Acceder a evento</string>
    <string name="suggest_event">Sugerir un evento</string>
    <string name="chats">Chats</string>
    <string name="friends">Amigos</string>
    <string name="my_schedule">Mi horario</string>
    <string name="profile">Perfil</string>
    <string name="generate_qr">Generar/Leer QR</string>
    <string name="config">Configuración</string>
    <string name="logout">Cerrar sesión</string>
    <string name="generate_or_read_qr">¿Quieres generar o leer un QR de usuario?</string>
    <string name="generate_qr_1">Generar QR</string>
    <string name="read_qr_1">Leer QR</string>
    <string name="scan_qr">Escanea el código QR</string>
    <string name="canceled">Cancelado</string>
    <string name="already_friend">Ya tienes a este amigo agregado</string>
    <string name="user_qr">QR del usuario</string>
    <string name="show_text">¡Obtén nuevos amigos!</string>
    <string name="date_event">Fecha de celebración</string>
    <string name="place_event">Explanada principal</string>
    <string name="connect_event">Conectarse a evento</string>
    <string name="connect_method">Selecciona el método con el que te quieres unir al evento</string>
    <string name="not_nfc_supported">Tu teléfono no dispone de la tecnología NFC</string>
    <string name="nfc_disabled">¡Debes activar la tecnología NFC!</string>
    <string name="success_nfc">Acerca el teléfono al tag NFC</string>
    <string name="add_photo">Añadir foto</string>
    <string name="description">Descripción</string>
    <string name="product_title">Título del producto</string>
    <string name="product_price">Precio del producto</string>
    <string name="noone">Ninguna</string>
    <string name="save">GUARDAR</string>
    <string name="suggest_photo">Sugerir foto</string>
    <string name="event_title">Título del evento</string>
    <string name="event_place">Lugar del evento</string>
    <string name="birthday_question">Queremos saber más sobre ti. ¿Cuál es tu fecha de nacimiento?</string>
    <string name="personal_data">Datos Personales</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="send_suggestion">Enviar sugerencia</string>
    <string name="friend_request">Solicitud de amistad</string>
    <string name="user">\"El usuario \"</string>
    <string name="second_part_question">\" quiere ser tu amigo. ¿Aceptas?\"</string>
    <string name="first_part_new_friend">\"¡Perfecto! ¡Ahora tú y \"</string>
    <string name="second_part_new_friend">\" sois amigos!\"</string>
    <string name="warning_chat">Para poder chatear con un usuario debéis ser amigos</string>
    <string name="are_u_sure">¿Estás seguro?</string>
    <string name="first_part_delete_friend">\"¿Estás seguro de que quieres eliminar a \"</string>
    <string name="second_part_delete_friend">\" como amigo \"</string>
    <string name="delete_friend_success">Amigo eliminado satisfactoriamente</string>
    <string name="first_part_warning">\"¡Genera tu QR y avisa a \"</string>
    <string name="second_part_warning">\" para que lo lea también!\"</string>
    <string name="event_image_access">imagen del evento</string>
    <string name="star_text_1">¡Recuerda que puedes confirmar tu asistencia pulsando la estrellita!</string>
    <string name="no_Account">¿Aún no tienes una cuenta?</string>
    <string name="google">Iniciar sesión con Google</string>
    <string name="register">Regístrate</string>
    <string name="session">Iniciar Sesión</string>
    <string name="verify_email">Hola, antes de continuar, es necesario que verifiques tu Email</string>
    <string name="already_verified">Ya lo he verificado</string>
    <string name="verify_your_email">Verifica tu Email</string>
    <string name="finish">Finalizar</string>
    <string name="ask_description">Por último, danos una pequeña descripción sobre ti</string>
    <string name="warning_description">Ten en cuenta que esta descripción será pública desde tu perfil</string>
    <string name="sign_in_problems">¿Tienes problemas para iniciar sesión?</string>
    <string name="help">Obtén ayuda.</string>
</resources>