
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header"
        app:icon="@drawable/ic_message">


        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header"
        app:icon="@drawable/ic_sync">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Notificaciones"
        app:icon="@drawable/ic_black_notifications">

        <SeekBarPreference
            android:key="volume_notifications"
            app:title="Volumen"
            app:showSeekBarValue="true"
            app:defaultValue="50"/>

        <SwitchPreferenceCompat
            android:key="notifications"
            app:title="Desactivar notificaciones"
            android:summaryOn="No recibirás más notificaciones"
            android:summaryOff="Recibirás notificaciones"/>

    </PreferenceCategory>



</PreferenceScreen>