<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quieres_publicar_el_producto"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonYes"
            android:background="@drawable/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/si"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"/>

        <Button
            android:id="@+id/buttonNo"
            android:background="@drawable/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"/>
    </LinearLayout>


</LinearLayout>