<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_question_2"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">
        <Button
            android:id="@+id/buttonYes"
            android:background="@drawable/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/archive_text"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"/>

        <Button
            android:id="@+id/buttonDelete"
            android:background="@drawable/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_text"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="90dp"/>
    </LinearLayout>


</LinearLayout>