<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.drawer.qr.GenerateQRFragment">

    <TextView
        android:id="@+id/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_or_read_qr"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25sp"
        android:paddingTop="80dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/GenerateQRButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_qr_1"
        android:background="@drawable/button_1"
        app:layout_constraintTop_toBottomOf="@+id/TitleText"
        android:layout_marginTop="50dp"
        android:minWidth="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/ReadQRButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_qr_1"
        android:background="@drawable/button_1"
        android:minWidth="150dp"
        app:layout_constraintTop_toBottomOf="@+id/GenerateQRButton"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>