<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta_dejar_de_publicar"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/buttonYes"
        android:background="@drawable/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/Question_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/buttonNo"
        android:background="@drawable/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Question_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>